# area_calculator

./: README.md  main.py  pyproject.toml  test_data_circle.json  test_data_triangle.json  tests.py
area_calculator/: base_shape_object.py  calculator.py  shapes.py
